# medismart

./: .env  .gitignore  Chatbot.py  Chatbot_react.py  README.md  client.py  hospital_mcp.json  pyproject.toml  requirements.txt  server.py
config/: auth_config.yaml
data/: hospital-data-analysis.csv  intent_clf_transformer.joblib  intent_data.jsonl  patient_los_model.joblib  patient_risk_model.joblib
docs/: mcp_inspector_guide.md  testing_queries.md
pages/: 1_Account_Manager.py
utils/: analytics.py  anamoly.py  compare_efficacy.py  counterfactual.py  csv_to_sql.py  file_reader.py  intent_classifier.py  los.py  plotting.py  risk.py  similar.py  test_intent.py  train_intent_model.py  train_los_model.py  train_model.py  train_risk_model.py  triage.py
