[project]
name = "file-reader"
version = "0.1.0"
description = "Hospital Patient Data Management MCP Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pandas>=2.0.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "joblib>=1.2.0",
    "numpy>=1.24.0",
    "psycopg2-binary>=2.9.10",
]

[project.scripts]
file-reader = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils", "tools"]
